
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/picture1"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

        </LinearLayout>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="35sp" />
            </TableRow>
            <TableRow
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/new_username"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:hint="@string/username1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="35sp" />
            </TableRow>
            <TableRow
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/new_password"
                    android:inputType="numberPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:hint="@string/password1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow android:layout_marginTop="20dp">
                <Button

                    android:id="@+id/Create_account"
                    android:layout_width="235dp"
                    android:layout_height="64dp"
                    android:background="@color/black"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/btnRegister"
                    android:textSize="20sp"
                    android:layout_marginLeft="55dp"/>
            </TableRow>
        </TableLayout>


    </LinearLayout>




